--- a/aichat.html
+++ b/aichat.html
@@ -134,7 +134,7 @@
         import { GoogleGenerativeAI } from 'https://esm.run/@google/generative-ai';
 
         // Replace with your actual API key
-        const API_KEY = 'AIzaSyDv4LGPjUJ_RXCGiExWQxwKtqiLvJPXWtY';
+        const API_KEY = 'YOur API KEY HERE';
         const genAI = new GoogleGenerativeAI(API_KEY);
         const model = genAI.getGenerativeModel({ model: "gemini-1.5-pro" });
 
